Everything is almost there except FileHandler

--- a/IceNote.cbp
+++ b/IceNote.cbp
@@ -51,6 +51,7 @@
 				<Option projectLinkerOptionsRelation="2" />
 				<Compiler>
 					<Add option="-O2" />
+					<Add option="-D_CUR_" />
 					<Add directory="$(#wx)\lib\gcc_lib\mswu" />
 				</Compiler>
 				<ResourceCompiler>
